deployment/facebox.yaml
apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: facebox
  labels:
    app: facebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facebox
  template:
    metadata:
      labels:
        app: facebox
    spec:
      containers:
      - name: facebox
        image: machinebox/facebox:latest
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: facebox
spec:
  selector:
    app: facebox
  ports:
  - protocol: TCP
    port: 8080
status:
  loadBalancer: {}

---
kind: Service
apiVersion: v1
metadata:
  name: facebox-client
spec:
  selector:
    app: facebox
  ports:
  - protocol: TCP
    port: 8080
    nodePort: 32380
  type: NodePort
status:
  loadBalancer: {}
